--- a/css/scss/_header-fix.scss
+++ b/css/scss/_header-fix.scss
@@ -139,7 +139,7 @@
                                 }
                                 .view-cart {
                                     a {
-                                        background-color: $orange;
+                                        background-color: $biru-muda;
                                         color: $putih
                                     }
                                     a:hover {
@@ -148,7 +148,7 @@
                                 }
                                 .checkout {
                                     a {
-                                        background-color: $biru-muda;
+                                        background-color: $hijau;
                                         color: $putih;
                                     }
                                     a:hover {
