--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -196,7 +196,7 @@
                             }
                             .view-cart {
                                 a {
-                                    background-color: $orange;
+                                    background-color: $biru-muda;
                                     color: $putih
                                 }
                                 a:hover {
@@ -205,7 +205,7 @@
                             }
                             .checkout {
                                 a {
-                                    background-color: $biru-muda;
+                                    background-color: $hijau;
                                     color: $putih;
                                 }
                                 a:hover {
