--- a/css/scss/_checkout.scss
+++ b/css/scss/_checkout.scss
@@ -52,6 +52,9 @@
                         .detail {
                             h4 {
                                 margin: 0px;
+                                font-family: 'Open Sans', sans-serif;
+                                font-weight: 600;
+                                letter-spacing: 1px;
                             }
                             a {
                                 color: $hitam;
@@ -90,7 +93,7 @@
                         }
                         
                         padding: 15px 0px;
-                        border-top: 1px solid $grey;
+                        border-top: 1px solid $biru;
                     }
                     padding-top: 0px;
                 }
