--- a/css/scss/_checkout.scss
+++ b/css/scss/_checkout.scss
@@ -5,7 +5,7 @@
             .cart {
                 .panel-heading-custom {
                     h3, a {
-                        letter-spacing: 1px;
+                        letter-spacing: 2px;
                         color: $putih;
                     }
                     a:hover {
@@ -102,11 +102,11 @@
         }
 
         .left {
-            .shipping, .payment {
+            .shipping {
                 .panel-heading-custom {
                     h3 {
                         color: $putih;
-                        letter-spacing: 1px;
+                        letter-spacing: 2px;
                     }
                     background-color: $biru;
                 }
@@ -129,6 +129,94 @@
                         }
                     }
                     padding: 15px 0px;
+                }
+                border-color: $biru;
+            }
+            .metode-payment {
+                .panel-heading-custom {
+                    h3 {
+                        color: $putih;
+                        letter-spacing: 2px;
+                    }
+                    background-color: $biru;
+                }
+                .panel-body {   
+                    .funkyradio {
+                        div {
+                            clear: both;
+                            overflow: hidden;
+                        }
+
+                        label {
+                            width: 100%;
+                            border-radius: 3px;
+                            border: 1px solid #D1D3D4;
+                            font-weight: normal;
+                        }
+
+                        input[type="radio"],
+                        input[type="checkbox"] {
+
+                            &:empty {
+                                display: none;
+
+                                ~ label {
+                                    position: relative;
+                                    line-height: 2.5em;
+                                    text-indent: 3.25em;
+                                    margin-top: 2em;
+                                    cursor: pointer;
+                                    user-select: none;
+
+                                    &:before {
+                                        position: absolute;
+                                        display: block;
+                                        top: 0;
+                                        bottom: 0;
+                                        left: 0;
+                                        content: '';
+                                        width: 2.5em;
+                                        background: #D1D3D4;
+                                        border-radius: 3px 0 0 3px;
+                                    }
+                                }
+                            }
+
+                            &:hover:not(:checked) ~ label {
+                                color: #888;
+
+                                &:before {
+                                    content: '\2714';
+                                    text-indent: .9em;
+                                    color: #C2C2C2;
+                                }
+                            }
+
+                            &:checked ~ label {
+                                color: #777;
+
+                                &:before {
+                                    content: '\2714';
+                                    text-indent: .9em;
+                                    color: #333;
+                                    background-color: #ccc;
+                                }
+                            }
+
+                            &:focus ~ label:before {
+                                box-shadow: 0 0 0 3px #999;
+                            }
+                        }
+                        &-info {
+                            input[type="radio"],
+                            input[type="checkbox"] {
+                                &:checked ~ label:before {
+                                    color: #fff;
+                                    background-color: $biru-muda;
+                                }
+                            }
+                        }
+                    } 
                 }
                 border-color: $biru;
             }
