--- a/css/scss/_variable.scss
+++ b/css/scss/_variable.scss
@@ -6,6 +6,7 @@ $hitam: #212121;
 $orange: #EE7E32;
 $merah: #CC0000;
 $grey: #ECECEC;
+$grey-text: #b6b6b6;
 $hijau: #27AE60;
 $gradien-grey: #EBEBEB, #ECECEC, #EDEDED, #EEEEEE, #EFEFEF, #F0F0F0;
 $shadow-post: 0px 0px 10px rgba(41, 41,42, .5);
